--- a/cartoon/naruto.html
+++ b/cartoon/naruto.html
@@ -15,10 +15,10 @@
     <ol>
         <li><a href="onepiece.html">원피스</a></li>
         <li><a href="naruto.html">나루토</a></li>
-        <li><a href="bleach.html">블리치</a></<li>
+        <li><a href="bleach.html">블리치</a></li>
     </ol>
     <img src="naruto.jpg" width="500px">
-    <h2>나루도</h2>
+    <h2>나루토</h2>
     <iframe width="740" height="416" src="https://serviceapi.nmv.naver.com/flash/convertIframeTag.nhn?vid=B9850244743EEBFCFE229C7C5F97885BFB1D&outKey=V1210484d67c7a9525ab0757bd6f9e80411aae59d7aebb2fcd61f757bd6f9e80411aa" frameborder="no" scrolling="no" title="NaverVideo" allow="autoplay; gyroscope; accelerometer; encrypted-media" allowfullscreen></iframe>
     <br><br>
     <p>
