--- a/cartoon/onepiece.html
+++ b/cartoon/onepiece.html
@@ -15,7 +15,7 @@
     <ol>
         <li><a href="onepiece.html">원피스</a></li>
         <li><a href="naruto.html">나루토</a></li>
-        <li><a href="bleach.html">블리치</a></<li>
+        <li><a href="bleach.html">블리치</a></li>
     </ol>
     <img src="onepiece.png" width="500px">
     <h2>원피스</h2>
