Made according to plan

--- a/cartoon/bleach.html
+++ b/cartoon/bleach.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jihye Lee's favorite cartoon</title>
+    <title>My favorite Cartoon Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -12,20 +13,30 @@
 
     <h1><a href="index.html">CARTOON</a></h1>
 
-    <ol>
-        <li><a href="onepiece.html">원피스</a></li>
-        <li><a href="naruto.html">나루토</a></li>
-        <li><a href="bleach.html">블리치</a></li>
-    </ol>
-    <img src="bleach.png" width="500px">
-    <h2>블리치</h2>
-    <iframe width="740" height="416" src="https://serviceapi.nmv.naver.com/flash/convertIframeTag.nhn?vid=AA61976AD61E732EBA02B21FA7062EFA1C02&outKey=V12789c26a081063190baf85f5da17737313686cebcdcdd719f53f85f5da177373136" frameborder="no" scrolling="no" title="NaverVideo" allow="autoplay; gyroscope; accelerometer; encrypted-media" allowfullscreen></iframe>
-    <br><br>
-    <p>
-      유령을 볼 수 있는 고등학생의 소년 쿠로사키 이치고는 어느 날 자신을 사신이라고 칭한 여자,
-      쿠치키 루키아를 만나 사신의 힘을 양도 받게 되어 악령인 호로의 퇴치자(사신)이 된다.
-      쿠로사키 이치고와 그 동료들의 활약을 그린 만화이다.
-    </p>
+    <div id="grid">
+        <div>
+            <ol>
+                <li><a href="onepiece.html">원피스</a></li>
+                <li><a href="naruto.html">나루토</a></li>
+                <li><a href="bleach.html">블리치</a></li>
+            </ol>
+        </div>
+
+        <div id="content">
+            <!--<img src="bleach.png" width="500px">-->
+            <h2>블리치</h2>
+            <iframe width="740" height="416" src="https://serviceapi.nmv.naver.com/flash/convertIframeTag.nhn?vid=AA61976AD61E732EBA02B21FA7062EFA1C02&outKey=V12789c26a081063190baf85f5da17737313686cebcdcdd719f53f85f5da177373136" frameborder="no" scrolling="no" title="NaverVideo" allow="autoplay; gyroscope; accelerometer; encrypted-media" allowfullscreen></iframe>
+            <br>
+            <p>
+                유령을 볼 수 있는 고등학생의 소년 쿠로사키 이치고는 어느 날 자신을 사신이라고 칭한 여자,
+                쿠치키 루키아를 만나 사신의 힘을 양도 받게 되어 악령인 호로의 퇴치자(사신)이 된다.
+                쿠로사키 이치고와 그 동료들의 활약을 그린 만화이다.
+            </p>
+            <br>
+        </div>
+    </div>
+    
+    
 
 </body>
 
