--- a/cartoon/index.html
+++ b/cartoon/index.html
@@ -4,19 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jihye Lee's favorite cartoon</title>
+    <title>My favorite Cartoon Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-
     <h1><a href="index.html">CARTOON</a></h1>
 
-    <ol>
-        <li><a href="onepiece.html">원피스</a></li>
-        <li><a href="naruto.html">나루토</a></li>
-        <li><a href="bleach.html">블리치</a></li>
-    </ol>
+    <div id="grid">
+        <div>
+            <ol>
+                <li><a href="onepiece.html">원피스</a></li>
+                <li><a href="naruto.html">나루토</a></li>
+                <li><a href="bleach.html">블리치</a></li>
+            </ol>
+        </div>
+
+        <div id="content" class="content_home">
+            <p>Welcome to My favorite cartoon web!</p>
+            <p>My favorite cartoons are Onepiece, Naruto, and Bleach.</p>
+            <br>
+            <img src="all_cartoon.png" width="700px">
+            <br><br>
+        </div>
+    </div>
+    
+
+    
 
 
 </body>
