--- a/cartoon/onepiece.html
+++ b/cartoon/onepiece.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jihye Lee's favorite cartoon</title>
+    <title>My favorite Cartoon Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -12,20 +13,30 @@
 
     <h1><a href="index.html">CARTOON</a></h1>
 
-    <ol>
-        <li><a href="onepiece.html">원피스</a></li>
-        <li><a href="naruto.html">나루토</a></li>
-        <li><a href="bleach.html">블리치</a></li>
-    </ol>
-    <img src="onepiece.png" width="500px">
-    <h2>원피스</h2>
-    <iframe width="740" height="416" src="https://serviceapi.nmv.naver.com/flash/convertIframeTag.nhn?vid=011FD570B376B4EEBE831AEC7FC67DCED3E8&outKey=V123030ab53ab2f6658a83e911276087d41612e17c39bca0604833e911276087d4161" frameborder="no" scrolling="no" title="NaverVideo" allow="autoplay; gyroscope; accelerometer; encrypted-media" allowfullscreen></iframe>
-    <br><br>
-    <p>
-      해적 몽키 D. 루피는, 해적왕이 되기로 각오하고 바다를 탐험하며 동료를 모은다. 루피가 결성한 밀짚모자 해적단은 해적하면 연상되는
-      약탈과 살인 대신 동료를 만들고 그 동료들과 나라를 도와주거나 탐험을 하는 등의 자유분방하고 동료를 무엇보다 위하는 그런 해적단이다.
-      루피와 그의 동료들은 각자의 꿈과 목적을 가지고 있으며 그것을 이루기 위해 바다를 여행하고 있다.
-    </p>
+    <div id="grid">
+        <div>
+            <ol>
+                <li><a href="onepiece.html">원피스</a></li>
+                <li><a href="naruto.html">나루토</a></li>
+                <li><a href="bleach.html">블리치</a></li>
+            </ol>
+        </div>
+
+        <div id="content">
+            <!--<img src="onepiece.png" width="500px">-->
+            <h2>원피스</h2>
+            <iframe width="740" height="416" src="https://serviceapi.nmv.naver.com/flash/convertIframeTag.nhn?vid=011FD570B376B4EEBE831AEC7FC67DCED3E8&outKey=V123030ab53ab2f6658a83e911276087d41612e17c39bca0604833e911276087d4161" frameborder="no" scrolling="no" title="NaverVideo" allow="autoplay; gyroscope; accelerometer; encrypted-media" allowfullscreen></iframe>
+            <br>
+            <p>
+                해적 몽키 D. 루피는, 해적왕이 되기로 각오하고 바다를 탐험하며 동료를 모은다. 루피가 결성한 밀짚모자 해적단은 해적하면 연상되는
+                약탈과 살인 대신 동료를 만들고 그 동료들과 나라를 도와주거나 탐험을 하는 등의 자유분방하고 동료를 무엇보다 위하는 그런 해적단이다.
+                루피와 그의 동료들은 각자의 꿈과 목적을 가지고 있으며 그것을 이루기 위해 바다를 여행하고 있다.
+            </p>
+            <br>
+        </div>
+    </div>
+    
+    
 
 
 </body>
